--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
 }
 
 .big-container {
+    margin-top: 120px;
     display: flex;
     flex-wrap: wrap; /* Allow containers to wrap to new lines */
     justify-content: center; /* Center containers horizontally */
@@ -92,7 +93,9 @@ input[type="submit"] {
     padding-left: 20px;
     box-sizing: border-box; /* Include padding in width calculation */
 }
-
+h1{
+    margin-top: 80px;
+}
 hr {
     width: 95%; /* Adjust width for responsiveness */
     margin: 10px auto; /* Center the line */
